--- a/Train Finder/Train Finder/ViewControllers/Cells/TFLineTableViewCell.xib
+++ b/Train Finder/Train Finder/ViewControllers/Cells/TFLineTableViewCell.xib
@@ -12,21 +12,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TFLineTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="TFLineTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HiE-55-2Q1">
-                        <rect key="frame" x="8" y="8" width="42" height="27.5"/>
+                        <rect key="frame" x="8" y="8" width="43.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="258" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFr-kP-KpM">
+                        <rect key="frame" x="270" y="8" width="42" height="73.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFr-kP-KpM">
-                        <rect key="frame" x="270" y="8" width="42" height="27.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EV9-eR-wei">
+                        <rect key="frame" x="8" y="32.5" width="252" height="45"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -35,9 +41,13 @@
                 <constraints>
                     <constraint firstItem="IFr-kP-KpM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="5Um-Ok-RjU"/>
                     <constraint firstItem="HiE-55-2Q1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="6Pa-8C-xat"/>
+                    <constraint firstAttribute="bottom" secondItem="EV9-eR-wei" secondAttribute="bottom" constant="12" id="Bds-CY-1Yi"/>
+                    <constraint firstItem="IFr-kP-KpM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HiE-55-2Q1" secondAttribute="trailing" constant="10" id="Be2-jy-ppV"/>
                     <constraint firstAttribute="bottom" secondItem="IFr-kP-KpM" secondAttribute="bottom" constant="8" id="JZG-8e-V3W"/>
-                    <constraint firstAttribute="bottom" secondItem="HiE-55-2Q1" secondAttribute="bottom" constant="8" id="PbS-Ma-TyF"/>
+                    <constraint firstItem="EV9-eR-wei" firstAttribute="top" secondItem="HiE-55-2Q1" secondAttribute="bottom" constant="4" id="Y8N-F2-TPC"/>
+                    <constraint firstItem="EV9-eR-wei" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="a2o-lY-hgT"/>
                     <constraint firstItem="HiE-55-2Q1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ca4-Qx-RLm"/>
+                    <constraint firstItem="IFr-kP-KpM" firstAttribute="leading" secondItem="EV9-eR-wei" secondAttribute="trailing" constant="10" id="iuS-Mj-6uM"/>
                     <constraint firstAttribute="trailing" secondItem="IFr-kP-KpM" secondAttribute="trailing" constant="8" id="yna-sP-gxi"/>
                 </constraints>
             </tableViewCellContentView>
@@ -45,7 +55,9 @@
             <connections>
                 <outlet property="lineNameLabel" destination="HiE-55-2Q1" id="97S-Yc-OtY"/>
                 <outlet property="timeLabel" destination="IFr-kP-KpM" id="QmL-A0-n5D"/>
+                <outlet property="towardsLabel" destination="EV9-eR-wei" id="3BU-g0-3DT"/>
             </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="77.008928571428569"/>
         </tableViewCell>
     </objects>
 </document>
