--- a/Train Finder/Train Finder/ViewControllers/Landing/TFLandingViewController.xib
+++ b/Train Finder/Train Finder/ViewControllers/Landing/TFLandingViewController.xib
@@ -33,7 +33,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dpz-VP-rGQ">
-                    <rect key="frame" x="0.0" y="86" width="414" height="776"/>
+                    <rect key="frame" x="0.0" y="66" width="414" height="796"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BUK-6w-iad">
@@ -61,10 +61,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X32-cY-Wfg">
-                    <rect key="frame" x="0.0" y="86" width="414" height="776"/>
+                    <rect key="frame" x="0.0" y="66" width="414" height="796"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zYz-U0-8rw">
-                            <rect key="frame" x="186" y="378" width="42" height="20.5"/>
+                            <rect key="frame" x="186" y="388" width="42" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="dpz-VP-rGQ" secondAttribute="bottom" id="FCA-hF-cVy"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="dpz-VP-rGQ" secondAttribute="trailing" id="Jo1-Ac-tJf"/>
                 <constraint firstItem="pBY-8X-htd" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="YDV-Xn-X4U"/>
-                <constraint firstItem="dpz-VP-rGQ" firstAttribute="top" secondItem="pBY-8X-htd" secondAttribute="bottom" constant="20" id="aPY-uQ-ngk"/>
+                <constraint firstItem="dpz-VP-rGQ" firstAttribute="top" secondItem="pBY-8X-htd" secondAttribute="bottom" id="aPY-uQ-ngk"/>
                 <constraint firstItem="X32-cY-Wfg" firstAttribute="bottom" secondItem="dpz-VP-rGQ" secondAttribute="bottom" id="b6R-oo-kdm"/>
                 <constraint firstItem="BUK-6w-iad" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="boW-u9-LOx"/>
                 <constraint firstItem="BUK-6w-iad" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="gfb-8o-xA6"/>
